--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/instruction/node_modules/
-/submission/part2/phonebook/node_modules
+node_modules/
 /.pnp
 .pnp.js
 
